--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "ext-gd": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "ColorPalette\\": "src/"
+        }
     },
     "minimum-stability" : "dev"
 }
